# ODFAEG

./: .gitignore  application.html  commandes.html  composantsrendus.html  ecssystem.html  entites.html  entitespersos.html  gestionentites.html  gestionnairespersos.html  installation.html  menu.html  mypersonnalkey  readme.txt~  vues.html
ODFAEG/src/odfaeg/Audio/: CMakeLists.txt  SoundFile.cpp  SoundFile.hpp  aLCheck.cpp  aLCheck.hpp  alResource.cpp  audioDevice.cpp  audioDevice.hpp  inputSoundFile.cpp  listener.cpp  player.cpp  sound.cpp  soundBuffer.cpp  soundFileFactory.cpp  soundFileReaderFlac.cpp  soundFileReaderFlac.hpp  soundFileReaderOgg.cpp  soundFileReaderOgg.hpp  soundFileReaderWav.cpp  soundFileReaderWav.hpp  soundSource.cpp  soundStream.cpp  stream.cpp
ODFAEG/src/odfaeg/Network/: CMakeLists.txt  application.cpp  cliEncryptedPacket.cpp  client.cpp  encryptedPacket.cpp  http.cpp  ipaddress.cpp  network.cpp  packet.cpp  socket.cpp  socketselector.cpp  srkserveur.cpp  symEncPacket.cpp  tcplistener.cpp  tcpsocket.cpp  updsocket.cpp  user.cpp
ODFAEG2/: .gitattributes  CMakeLists.txt  CMakePresets.json  conan_provider.cmake  conanfile.txt  odfaegTargets.cmake
ODFAEG2/Shader/: boneAnim.comp  cullingBatching.comp  envMap.frag  envMap.vert  linkListQuadEnv.frag  linkedList.frag  linkedListQuad.frag  linkedListQuad.vert  meshCullingBatching.comp  meshRenderTarget.frag  meshShader.mesh  morphAnim.comp  particleEmission.comp  particleUpdate.comp  particleVerticesUpdater.comp  reflectRefract.frag  reflectRefract.vert  renderTarget.frag  renderTarget.vert  resetBuffers.comp  shadowMapping.frag  shadowMapping.vert  shadowMappingCSM.frag  shadowMappingCSM.vert  shadowMappingPL.frag  shadowMappingPL.vert  shadowPassCSM.frag  shadowPassCSM.vert  shadowPassPL.frag  shadowPassPL.vert  taskShader.task  updateAnimCurrentFrame.comp  vertexBuffer.frag  vertexBuffer.vert
ODFAEG2/build-debug/: .ninja_deps  .ninja_log  BZip2-debug-x86_64-data.cmake  Boost-Target-debug.cmake  Boost-debug-x86_64-data.cmake  BoostConfig.cmake  CMakeCache.txt  CMakePresets.json  EnTT-Target-debug.cmake  EnTT-debug-x86_64-data.cmake  EnTTConfig.cmake  EnTTConfigVersion.cmake  FindFreetype.cmake  FindOpenAL.cmake  FindOpenSSL.cmake  FindZLIB.cmake  Ogg-debug-x86_64-data.cmake  OpenAL-Target-debug.cmake  OpenAL-debug-x86_64-data.cmake  OpenALConfig.cmake  OpenALConfigVersion.cmake  OpenSSL-debug-x86_64-data.cmake  OpenSSLConfig.cmake  Opus-debug-x86_64-data.cmake  OpusConfig.cmake  PNG-debug-x86_64-data.cmake  SPIRV-Tools-Target-debug.cmake  SPIRV-Tools-debug-x86_64-data.cmake  SPIRV-ToolsConfig.cmake  SndFile-Target-debug.cmake  SndFile-debug-x86_64-data.cmake  SndFileConfig.cmake  Vorbis-debug-x86_64-data.cmake  ZLIB-debug-x86_64-data.cmake  ZLIBConfig.cmake  assimp-Target-debug.cmake  assimp-config.cmake  assimp-debug-x86_64-data.cmake  brotli-debug-x86_64-data.cmake  build.ninja  (+48 more)
ODFAEG2/build-debug/src/odfaeg/: cmake_install.cmake
ODFAEG2/cmake/: odfaegConfig.cmake.in
ODFAEG2/cmake/toolchains/: msys2-clang.cmake
ODFAEG2/include/odfaeg/: config.hpp
ODFAEG2/include/odfaeg/Core/: export.hpp  macros.hpp
ODFAEG2/include/odfaeg/Entity/: export.hpp
ODFAEG2/include/odfaeg/Graphics/: export.hpp  windowHandle.hpp
ODFAEG2/include/odfaeg/Math/: export.hpp
ODFAEG2/include/odfaeg/Physics/: export.hpp
ODFAEG2/include/odfaeg/Window/: export.hpp  windowHandle.hpp
ODFAEG2/src/odfaeg/: CMakeLists.txt  Makefile
ODFAEG2/src/odfaeg/Audio/: CMakeLists.txt
ODFAEG2/src/odfaeg/Core/: CMakeLists.txt  Makefile  any.ixx  application.ixx  archive.ixx  class.ixx  clock.ixx  delegate.ixx  factory.ixx  inputStream.ixx  metaprog.ixx  nonCopyable.ixx  resourceCache.ixx  resourceManager.ixx  runtime_compiler.ixx  serialization.ixx  stateManager.ixx  string.ixx  threadPool.ixx  timer.ixx  utf.ixx  utilities.ixx  variant.ixx  worker.ixx
ODFAEG2/src/odfaeg/Entity/: CMakeLists.txt  Makefile  animation.cpp  animation.ixx  animator.cpp  animator.ixx  assimpHelper.ixx  bone.cpp  bone.ixx  color.cpp  color.ixx  cube.cpp  cube.ixx  emittors.ixx  entity.ixx  gameObject.cpp  gameObject.ixx  impl.cpp  impl.ixx  model.cpp  model.ixx  morphAnim.cpp  morphAnim.ixx  particle.ixx  particleSystem.cpp  particleSystem.ixx  plane.cpp  plane.ixx  primitiveType.ixx  rect.ixx  tile.cpp  tile.ixx  transformMatrix.cpp  transformMatrix.ixx  transformable.cpp  transformable.ixx  vertex.cpp  vertex.ixx  vertexArray.cpp  vertexArray.ixx
ODFAEG2/src/odfaeg/Graphics/: CMakeLists.txt  Makefile  animation.cpp  animation.ixx  animator.cpp  animator.ixx  application.ixx  assimpHelper.ixx  blendMode.cpp  blendMode.ixx  bone.cpp  bone.ixx  boneAnimUpdater.cpp  boneAnimUpdater.ixx  buffer.cpp  buffer.ixx  camera.cpp  camera.ixx  color.cpp  color.ixx  commandPool.cpp  commandPool.ixx  componentManager.ixx  cube.cpp  cube.ixx  debug.cpp  debug.ixx  descriptor.cpp  descriptor.ixx  device.cpp  device.ixx  emittors.ixx  envMapRenderer.cpp  envMapRenderer.ixx  fence.cpp  fence.ixx  frameBuffer.cpp  frameBuffer.ixx  gameObject.cpp  gameObject.ixx  (+77 more)
ODFAEG2/src/odfaeg/Math/: CMakeLists.txt  Makefile  computer.ixx  distribution.ixx  maths.ixx  matrix.ixx  plane.ixx  quaternion.ixx  ray.ixx  transformMatrix.cpp  transformMatrix.ixx  triangle.ixx  vec.ixx
ODFAEG2/src/odfaeg/Network/: CMakeLists.txt
ODFAEG2/src/odfaeg/Physics/: CMakeLists.txt  Makefile  boundingBox.cpp  boundingBox.ixx
ODFAEG2/src/odfaeg/Window/: CMakeLists.txt  Makefile  action.cpp  action.ixx  command.cpp  command.ixx  cursor.cpp  cursor.ixx  cursorImpl.cpp  cursorImpl.ixx  iCursorType.ixx  iEvent.ixx  iKeyboard.cpp  iKeyboard.ixx  iMouse.cpp  iMouse.ixx  listener.ixx  videoMode.cpp  videoMode.ixx  videoModeImpl.cpp  window.cpp  (+5 more)
ODFAEG2/tools/: build_modules.sh
ODFAEG2Editor/: CMakeLists.txt  conanfile.txt  main.cpp
TestODFAEG2/: CMakeLists.txt  CMakePresets.json  conanfile.txt  main.cpp  vcpkg.json
TestODFAEG2/CubeTest/: cube_test.glb
TestODFAEG2/car/textures/: FINAL_MODEL_S4.fbx
TestODFAEG2/carGLTF/: license.txt  scene.gltf
TestODFAEG2/cmake/toolchains/: msys2-clang.cmake
(+573 files in other folders)
